@@ -5,6 +5,10 @@ import org.springframework.beans.BeanUtils;
 import java.util.List;
 import java.util.stream.Collectors;
 
+
+/**
+ * 将DTO转成VO的工具类
+ */
 public class BeanCopyUtil {
     private BeanCopyUtil() {
     }
@@ -13,7 +17,7 @@ public class BeanCopyUtil {
         //创建目标对象
         V result = null;
         try {
-            result = clazz.newInstance();
+            result = clazz.getDeclaredConstructor().newInstance();
             //实现属性copy
             BeanUtils.copyProperties(source, result);
         } catch (Exception e) {
